@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-16T08:11:00Z",
-  "count" : 9,
-  "count_minmax" : [ 9, 9 ],
-  "count_decinc" : [ -0, +9 ],
+  "timestamp" : "2022-06-16T16:10:47Z",
+  "count" : 16,
+  "count_minmax" : [ 9, 16 ],
+  "count_decinc" : [ -0, +16 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
