@@ -1,5 +1,5 @@
 {
-  "count": 39,
+  "count": 46,
   "uniques": 3,
   "views": [
     {
@@ -39,7 +39,7 @@
     },
     {
       "timestamp": "2022-06-16T00:00:00Z",
-      "count": 9,
+      "count": 16,
       "uniques": 1
     }
   ]
